# ff-optimizer

./: .colton.py.swp  .gitignore  FFgrapher.py  LICENSE  README.md  colton.py  environment.yml  pyproject.toml  source.sh
.github/: CODEOWNERS
examples/demo/: README  input.yaml
examples/openmm/: README  input.yaml
examples/setup/: README
examples/slurm/: input.yaml
ff_optimizer/: .active_learning.py.swp  .model.py.swp  .qmengine.py.swp  active_learning.py  elements.yaml  example.py  ff-opt.py  ff_opt.py  inputs.py  mmengine.py  model.py  optengine.py  qmengine.py  resp.py  resp_prior.py  setup.py  units.py  utils.py
scripts/: FFgrapher.py  computeTCCloud.py  ff-opt.py  format.sh  readValids.py  test.py  testChemCloud.py  vacation_to_hawaii.py  validGrapher.py
tests/: 23.rst7  checkUtils.py  chemcloud_mocks.py  conftest.py  fix_json.py  pytest.ini  qdata.txt  sbatch_23.sh  tc_10.out  test.py  test_activelearning.py  test_amberengine.py  test_cccloudengine.py  test_chemcloudengine.py  test_example.py  test_external.py  test_ff_opt.py  test_full.py  test_inputs.py  test_mmengine.py  test_mockchemcloud.py  test_model.py  test_openmmengine.py  test_optengine.py  test_qmengine.py  test_resp.py  test_sbatchengine.py  test_setup.py  test_slurmengine.py  test_tccloudengine.py  test_utils.py  utils.py
tests/active_learning/: MMforce.xyz  coords.xyz
tests/chemcloudengine/: .tc_1.out.swp  1.xyz  2.xyz  4.xyz  8.xyz  9.xyz  opt.in  ref_3_input.yaml  ref_3_output.yaml  ref_6_input.yaml  ref_6_output.yaml  tc_1.json  tc_1.out  tc_10.out  tc_2.json  tc_2.out  tc_3.out  tc_3_success.out  tc_4.out  tc_5.json  tc_5.out  tc_6.out  tc_6_success.out  tc_7.out  tc_8.json  tc_8.out  tc_9_success.json  tc_9_success.out
tests/full/: chemcloud.out  clean.sh  input.json  input_slurm.json  test.py
tests/inputs/: input.yaml
tests/mmengine/: 1.rst7  23.rst7  23.xyz  coors.xyz  coors2.xyz  frames.txt  md.py  test.rst7  test.xyz
tests/mockchemcloud/: ccinput.in  fail1.in  fail1.out  fail2.in  fail2.out  hydroxide.xyz  ref.out  resp.in  (+13 more)
(+3472 files in other folders)
