
[tool.pytest.ini_options]
testpaths = "tests/"

[tool.black]
line-length = 88

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.coverage.run]
branch = true
omit = [
"*/tests/*",
  "*/migrations/*",
    "*site-packages*",
      "*__init__.py",
      ]

[tool.poetry]
name = "ff-optimizer"
version = "0.1.0"
description = "Automated, iterative Amber force field optimization."
authors = ["Ethan Curtis"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
forcebalance = "^1.9.5"
openmm = "^8.1.1"
chemcloud = "^0.10.0"
scipy = "<=1.14.0"
gputil = "^1.4.0"
qcparse = "^0.6.0"
matplotlib = "<=3.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
exceptiongroup = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
